--- a/index.css
+++ b/index.css
@@ -2,3 +2,13 @@ body {
   background-color: rgb(20,20,20);
   color: white;
 }
+
+#menu {
+  display: flex;
+  flex-direction: row;
+}
+
+#menu a {
+  text-decoration: none;
+  color: white;
+}
