--- a/compte.css
+++ b/compte.css
@@ -7,9 +7,11 @@
 .connection {
   background-color: rgb(40,40,40);
   padding: 10%;
+  text-align: center;
 }
 
 .creation {
   background-color: rgb(40,40,40);
   padding: 10%;
+  text-align: center;
 }
