--- a/compte.css
+++ b/compte.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  color: white;
+  text-decoration: none;
 }
 
 .connection {
