--- a/compte.css
+++ b/compte.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  margin-top: 2%;
+  margin-top: 50px;
 }
 
 .connection {
