--- a/compte.css
+++ b/compte.css
@@ -7,7 +7,7 @@
 
 .connection {
   background-color: rgb(40,40,40);
-  padding: 10%;
+  padding: 20px;
   text-align: center;
   color: white;
   text-decoration: none;
@@ -15,7 +15,7 @@
 
 .creation {
   background-color: rgb(40,40,40);
-  padding: 10%;
+  padding: 20px;
   text-align: center;
   color: white;
   text-decoration: none;
