--- a/compte.css
+++ b/compte.css
@@ -7,6 +7,7 @@
 
 .connection, .creation {
   width: 50%;
+  height: 500px;
   background-color: rgb(40,40,40);
   text-align: center;
   color: white;
