--- a/compte.css
+++ b/compte.css
@@ -12,7 +12,7 @@
   text-align: center;
   color: white;
   text-decoration: none;
-  transition: background-color 0.3 ease;
+  transition: background-color 0.3s ease;
 }
 
 .connection:hover {
