--- a/index.css
+++ b/index.css
@@ -34,7 +34,7 @@ body {
   content: "";
   position: absolute;
   bottom: 0;
-  right: 0;
+  left: 0;
   width: 0;
   height: 2px;
   background-color: blue;
@@ -43,5 +43,5 @@ body {
 
 .menu a:hover::after {
   width: 100%;
-  right: 0;
+  left: 0;
 }
