--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ body {
   left: 0;
   width: 0;
   height: 2px;
-  background-color: black;
+  background-color: rgb(40,40,40);
   transition: width 0.3s ease, right 0.3s ease;
 }
 
