--- a/boutique.css
+++ b/boutique.css
@@ -4,6 +4,7 @@
   wrap: wrap;
   justify-content: space-evenly;
   margin-top: 50px;
+  margin-bottom: 20px;
 }
 
 .article {
@@ -11,4 +12,5 @@
   heigth: 75px;
   background-color: rgb(40,40,40);
   text-align: center;
+  flex-basis: calc(33.33% - 20px);
 }
