--- a/boutique.css
+++ b/boutique.css
@@ -8,7 +8,7 @@
 
 .article {
   width: 33%;
-  heigth: 125px;
+  heigth: 200px;
   background-color: rgb(40,40,40);
   text-align: center;
   flex-basis: calc(33.33% - 20px);
@@ -22,4 +22,12 @@
   flex-basis: calc(33.33% - 20px);
   margin-bottom: 20px;
   background-color: rgb(220,172,9);
+}
+
+#dispo {
+  background-color: green;
+}
+
+#indispo {
+  background_color: red;
 }
