--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
 * {
+  text-align: center;
+}
+
+body {
   background-color: rgb(20,20,20);
   color: white;
-  text-align: center;
 }
 
 .menu a {
