--- a/compte.css
+++ b/compte.css
@@ -13,6 +13,7 @@
   color: white;
   text-decoration: none;
   transition: background-color 0.5s ease;
+  border: 1px solid rgb(20,20,20);
 }
 
 .connection:hover {
