--- a/boutique.css
+++ b/boutique.css
@@ -22,7 +22,7 @@
   margin-bottom: 20px;
 }
 
-#dispo  #indispo {
+#dispo, #indispo {
   text-decoration: none;
   margin-bottom: 20px;
   color: white;
