--- a/boutique.css
+++ b/boutique.css
@@ -26,7 +26,7 @@
   text-decoration: none;
   margin-bottom: 20px;
   color: white;
-  border: 3px ridge rgb(50,50,50);
+  border: 2mm ridge rgb(50,50,50);
 }
 
 #dispo {
